Updated depercated use of new Double(x).