@@ -25,32 +25,32 @@ import edu.afit.csce723.p2.util.Util;
  */
 public class Environment extends Observable implements KeyListener {
 
-	/**
-	 * 
-	 * @param robotBehavior
-	 */
-	protected Environment(Behavior robotBehavior) {
+    /**
+     * 
+     * @param robotBehavior
+     */
+    protected Environment(Behavior robotBehavior) {
         myMap = Maze.getExplorerMap();
         trueRobot = new Robot(myMap.getStart());
         myRobotBehavior = robotBehavior;
-        
+
         errorRobot = new Robot(trueRobot.getPosition());
         errorSensorArray = new HashMap<Double, Double>();
-        
+
         path = new Path();
     }
 
-	/**
-	 * Advances the environment one timestep.
-	 */
+    /**
+     * Advances the environment one timestep.
+     */
     synchronized protected void step() {
         myRobotBehavior.genAction(new State(trueRobot)).execute(trueRobot);
         trueRobot.step();
         updateRobotPose();
         updateRobotSensors();
         motionErrorModel();
-		
-		notifyObservers(this);
+
+        notifyObservers(this);
         path.add(trueRobot.getPosition());
     }
 
@@ -60,24 +60,24 @@ public class Environment extends Observable implements KeyListener {
      */
     private void updateRobotPose() {
         for (int i = 0; i < RESOLUTION; i++) {
-        	Position offset = delta(trueRobot);
+            Position offset = delta(trueRobot);
             trueRobot.setPositionOffset(offset);
         }
     }
 
-	/**
+    /**
      * Shorten each rangeFinder beam to end at the point of intersection with
      * the nearest wall
      */
     private void updateRobotSensors() {
-    	// Limits the length of the sensor beam to intersection of the nearest wall
-    	Util.trimRobotSensors(trueRobot, myMap);
+        // Limits the length of the sensor beam to intersection of the nearest wall
+        Util.trimRobotSensors(trueRobot, myMap);
 
-    	Map<Double, Double> rangeSet = trueRobot.getSensorArray().getRangeReadings();
-    	
-    	errorSensorArray.clear();
+        Map<Double, Double> rangeSet = trueRobot.getSensorArray().getRangeReadings();
+
+        errorSensorArray.clear();
         for (Double angle : rangeSet.keySet()) {
-        	errorSensorArray.put(angle, rangeSensorErrorModel(rangeSet.get(angle)));
+            errorSensorArray.put(angle, rangeSensorErrorModel(rangeSet.get(angle)));
         }
     }
 
@@ -87,43 +87,43 @@ public class Environment extends Observable implements KeyListener {
      * @return
      */
     private double adjustVelocity(Robot robot) {
-    	double dv = robot.getVelocity() / RESOLUTION;
-    	double dTheta = robot.getTurnRate() / RESOLUTION;
-    	double theta = robot.getPosition().getTheta();
-    	
-    	double dx = dv * Math.cos(theta);
-    	double dy = dv * Math.sin(theta);
+        double dv = robot.getVelocity() / RESOLUTION;
+        double dTheta = robot.getTurnRate() / RESOLUTION;
+        double theta = robot.getPosition().getTheta();
+
+        double dx = dv * Math.cos(theta);
+        double dy = dv * Math.sin(theta);
         Position next = robot.getPosition().add(dx, dy, dTheta);
 
-    	while (!isValid(next)) {
-    		dv -= dv/10;
-	    	dx = dv * Math.cos(theta);
-	    	dy = dv * Math.sin(theta);
-        	next = robot.getPosition().add(dx, dy, dTheta);
-    	}
-    	return dv;
+        while (!isValid(next)) {
+            dv -= dv / 10;
+            dx = dv * Math.cos(theta);
+            dy = dv * Math.sin(theta);
+            next = robot.getPosition().add(dx, dy, dTheta);
+        }
+        return dv;
     }
-    
+
     /**
      * 
      * @param robot
      * @return
      */
-	private Position delta(Robot robot) {
-    	double dv = adjustVelocity(robot);
-    	double dTheta = robot.getTurnRate() / RESOLUTION;
-    	double theta = robot.getPosition().getTheta();
-    	
-    	double dx = dv * Math.cos(theta);
-    	double dy = dv * Math.sin(theta);
+    private Position delta(Robot robot) {
+        double dv = adjustVelocity(robot);
+        double dTheta = robot.getTurnRate() / RESOLUTION;
+        double theta = robot.getPosition().getTheta();
+
+        double dx = dv * Math.cos(theta);
+        double dy = dv * Math.sin(theta);
         return new Position(dx, dy, dTheta);
     }
-    
-	/**
-	 * 
-	 * @param pose
-	 * @return
-	 */
+
+    /**
+     * 
+     * @param pose
+     * @return
+     */
     private boolean isValid(Position pose) {
         for (Line2D wall : myMap.getWalls()) {
             if (wall.ptSegDist(pose) < trueRobot.getRadius()) {
@@ -138,83 +138,86 @@ public class Environment extends Observable implements KeyListener {
      * @param robot
      */
     private void motionErrorModel() {
-    	double dv = adjustVelocity(trueRobot);
-    	double dTheta = trueRobot.getTurnRate() / RESOLUTION;
-    	if (dv != 0.0 || dTheta != 0.0) {
-	    	// First Order Gaussian Markov Acceleration (FOGMA) to turnRate
-	    	t[0] = t[1];
-	    	t[1] = 0.75 * t[0] + (rand.nextGaussian());
-	    	dTheta += t[1]/250;
-	
-	    	// First Order Gaussian Markov Acceleration (FOGMA) to velocity
-	    	v[0] = v[1];
-	    	v[1] = 0.75 * v[0] + (rand.nextGaussian()/10);
-	    	dv += v[1];
-    	}
-    	
-    	errorRobot.setVelocityDirectly(dv);//.setVelocity(dv);
-    	errorRobot.setTurnRateDirectly(dTheta);//setTurnRate(dTheta);
-    	
-    	double theta = errorRobot.getPosition().getTheta();
-    	double dx = dv * Math.cos(theta);
-    	double dy = dv * Math.sin(theta);
-    	
+        double dv = adjustVelocity(trueRobot);
+        double dTheta = trueRobot.getTurnRate() / RESOLUTION;
+        if (dv != 0.0 || dTheta != 0.0) {
+            // First Order Gaussian Markov Acceleration (FOGMA) to turnRate
+            t[0] = t[1];
+            t[1] = 0.75 * t[0] + (rand.nextGaussian());
+            dTheta += t[1] / 250;
+
+            // First Order Gaussian Markov Acceleration (FOGMA) to velocity
+            v[0] = v[1];
+            v[1] = 0.75 * v[0] + (rand.nextGaussian() / 10);
+            dv += v[1];
+        }
+
+        errorRobot.setVelocityDirectly(dv);// .setVelocity(dv);
+        errorRobot.setTurnRateDirectly(dTheta);// setTurnRate(dTheta);
+
+        double theta = errorRobot.getPosition().getTheta();
+        double dx = dv * Math.cos(theta);
+        double dy = dv * Math.sin(theta);
+
         errorRobot.setPositionOffset(new Position(dx, dy, dTheta));
     }
-    
+
     /**
      * 
      * @param x
      * @return
      */
     private Double rangeSensorErrorModel(Double x) {
-		return x + rand.nextGaussian();
-	}
-    
+        return x + rand.nextGaussian();
+    }
+
     /**
-     * The robot's belief about its current position (errors included). 
+     * The robot's belief about its current position (errors included).
+     * 
      * @return The current robot Position (errors included).
      */
     synchronized public Position getRobotPose() {
-    	return new Position(errorRobot.getPosition());
+        return new Position(errorRobot.getPosition());
     }
-    
+
     /**
      * 
      * @return
      */
     synchronized public double getRobotVelocity() {
-    	return errorRobot.getVelocity();
+        return errorRobot.getVelocity();
     }
-    
+
     /**
      * 
      * @return
      */
     synchronized public double getRobotTurnRate() {
-    	return errorRobot.getTurnRate();
+        return errorRobot.getTurnRate();
     }
-    
+
     /**
      * 
      * @param newPose
      */
     synchronized public void adjustRobotPose(Position newPose) {
-    	if (newPose != null) {
-    		errorRobot.setPosition(newPose);
-    	}
+        if (newPose != null) {
+            errorRobot.setPosition(newPose);
+        }
     }
-    
+
     /**
      * Gets a set of sensor angles and current range sensor readings.
-     * @return A set of key/value pairs indicating the angle and current range reading
+     * 
+     * @return A set of key/value pairs indicating the angle and current range
+     *         reading
      */
     synchronized public Map<Double, Double> getRobotSensorReadings() {
-    	Map<Double, Double> retVal = new HashMap<Double, Double>();
-    	for (Double x : errorSensorArray.keySet()) {
-    		retVal.put(new Double(x), new Double(errorSensorArray.get(x)));
-    	}
-    	return retVal;
+        Map<Double, Double> retVal = new HashMap<Double, Double>();
+        for (Double x : errorSensorArray.keySet()) {
+            retVal.put(Double.valueOf(x), Double.valueOf(errorSensorArray.get(x)));
+        }
+        return retVal;
     }
 
     /**
@@ -230,7 +233,7 @@ public class Environment extends Observable implements KeyListener {
      * @return
      */
     synchronized protected Robot getRobot() {
-    	Robot currentRobot = new Robot(trueRobot.getPosition());
+        Robot currentRobot = new Robot(trueRobot.getPosition());
         Util.trimRobotSensors(currentRobot, myMap);
         return currentRobot;
     }
@@ -242,41 +245,43 @@ public class Environment extends Observable implements KeyListener {
     synchronized protected Path getPath() {
         return new Path(path);
     }
-    
+
     private final Maze myMap;
     private Robot trueRobot;
     private final Behavior myRobotBehavior;
     private final Robot errorRobot;
 
-	private final Random rand = new Random();
-    private double[] v = {rand.nextGaussian(), rand.nextGaussian()};
-    private double[] t = {rand.nextGaussian(), rand.nextGaussian()};
+    private final Random rand = new Random();
+    private double[] v = { rand.nextGaussian(), rand.nextGaussian() };
+    private double[] t = { rand.nextGaussian(), rand.nextGaussian() };
     private final Map<Double, Double> errorSensorArray;
     private final Path path;
     private static final int RESOLUTION = 1;
 
-	synchronized public void keyTyped(KeyEvent e) {}
+    synchronized public void keyTyped(KeyEvent e) {
+    }
 
-	synchronized public void keyPressed(KeyEvent e) {
+    synchronized public void keyPressed(KeyEvent e) {
         char c = e.getKeyChar();
 
         if (c == 'k') {
-        	setNewRandomLocation();
+            setNewRandomLocation();
         }
-	}
+    }
 
-	private void setNewRandomLocation() {
-		double x, y, theta;
-		Position pose;
-		do {
-			x = myMap.getWidth() * rand.nextDouble() + myMap.getOffset().width;
-			y = myMap.getHeight() * rand.nextDouble() + myMap.getOffset().height;
-			theta = 2 * Math.PI * (rand.nextDouble()-0.5);
-			pose = new Position(x, y, theta);
-		} while (!isValid(pose));
+    private void setNewRandomLocation() {
+        double x, y, theta;
+        Position pose;
+        do {
+            x = myMap.getWidth() * rand.nextDouble() + myMap.getOffset().width;
+            y = myMap.getHeight() * rand.nextDouble() + myMap.getOffset().height;
+            theta = 2 * Math.PI * (rand.nextDouble() - 0.5);
+            pose = new Position(x, y, theta);
+        } while (!isValid(pose));
 
-		trueRobot.setPosition(pose);
-	}
+        trueRobot.setPosition(pose);
+    }
 
-	public void keyReleased(KeyEvent e) {}
+    public void keyReleased(KeyEvent e) {
+    }
 }
